# Adventorator

./: .agentsignore  .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EPIC-CDA-CORE-001-IMPLEMENTATION-SUMMARY.md  Makefile  PR_DRAFT_ACTION_VALIDATION_PHASE1.md  README.md  ROADMAP.md  STORY-CDA-CORE-001B-SUMMARY.md  STORY-CDA-CORE-001D-SUMMARY.md  adventorator.sqlite3  adventurator_test.sqlite3  aicat-out.md  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: COPILOT_ENVIRONMENT.md  copilot-instructions.md  pull_request_template.md
contracts/: README.md
docs/: CHANGELOG.md  idempotency-key-v2-composition.md
migrations/: README  env.py
prompts/: README.md
scripts/: adr_lint.py  aicat.py  analyze_and_link_issues.py  analyze_issues_for_epic.py  assign_entity_ids.py  build_implementation_plan.py  check_mutation_guard.py  check_performance_budgets.py  cli.py  debug_activity_log.py  demo_entity_import.py  demo_manifest_validation.py  expire_pending.py  extract_plan_json.py  generate_keys.py  import_content.py  import_package.py  link_issues_to_epic.py  preflight_import.py  register_commands.py  run_ai_evals.py  run_package_import.py  scaffold_package.py  seed_encounter.py  sql-quick-actions.sqlite3-query  update_action_validation_traceability.py  update_content_index.py  validate_contracts.py  validate_prompts_and_contracts.py  watch_package.py  web_cli.py
tests/: collision_demo.py  conftest.py  test_act_cache_metric.py  test_act_integration.py  test_act_more_integration.py  test_action_validation_activity_log_phase6.py  test_action_validation_contracts.py  test_action_validation_executor_phase4.py  test_action_validation_metrics_phase1.py  test_action_validation_predicate_gate_phase5.py  test_action_validation_schemas.py  test_actor_normalization.py  test_advantage.py  test_ask_handler.py  (+87 more)
(+391 files in other folders)
