[project]
name = "Adventorator"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100

# New-style configuration lives under [tool.ruff.lint]
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]
ignore = [
	# Package name capitalized intentionally; ignore invalid module name rule
	"N999",
]

[tool.ruff.lint.isort]
known-first-party = ["Adventorator"]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-q --cov=Adventorator --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

