[project]
name = "Adventorator"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","N","B"]

[tool.pytest.ini_options]
addopts = "-q --cov=Adventorator --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

